--- a/source/_data/essay.yml
+++ b/source/_data/essay.yml
@@ -5,7 +5,7 @@
   buttonLink: /about/
   limit: 30
   home_essay: true
-  top_background: https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/essay.webp
+  top_background: https://s3.qjqq.cn/37/6555a4c05f5db.webp!color
   essay_list:
     - content: 在岁月的长河中，有一种奇妙的力量，
                 它能让万物焕发新生的光芒。
@@ -28,7 +28,7 @@
       video:
         - https://cdn.jsdelivr.net/npm/anzhiyu-blog-static@1.0.0/video/%E9%A3%8E%E8%BD%A6%E6%A0%B7%E5%BC%8F%E6%95%88%E6%9E%9C%E9%A2%84%E8%A7%88.mp4
       image:
-        - https://telegraph-image-7gh.pages.dev/file/bb80e85f3b976aff8330e.png
+        - https://s3.qjqq.cn/37/6555a52a0549a.webp!color
       address: 西安
       from: Qing
       link: /music
