--- a/_config.anzhiyu.yml
+++ b/_config.anzhiyu.yml
@@ -220,7 +220,7 @@ post_meta:
 # 主色调相关配置
 mainTone:
   enable: true # true or false 文章是否启用获取图片主色调
-  mode: api # cdn/api/both cdn模式为图片url+imageAve参数获取主色调，api模式为请求API获取主色调，both模式会先请求cdn参数，无法获取的情况下将请求API获取
+  mode: both # cdn/api/both cdn模式为图片url+imageAve参数获取主色调，api模式为请求API获取主色调，both模式会先请求cdn参数，无法获取的情况下将请求API获取
   # 项目地址：https://github.com/anzhiyu-c/img2color-go
   # api: https://img2color-go.vercel.app/api?img=  # mode为api时可填写
   api: https://api.qjqq.cn/api/Imgcolor?img= # https://api.qjqq.cn/doc-Imgcolor.html 公益接口
@@ -1235,7 +1235,7 @@ linkPageTop:
   addFriendPlaceholder: "昵称（请勿包含博客等字样）：\n网站地址（要求博客地址，请勿提交个人主页）：\n头像图片url（请提供尽可能清晰的图片，我会上传到我自己的图床）：\n描述：\n站点截图（可选）：\n"
 
 # 缩略图后缀 archive/tag/category 页面单独开启后缀
-pageThumbnailSuffix: "!page_thumbnail"
+pageThumbnailSuffix:  " "  # !page_thumbnail
 
 # 隐私协议弹窗
 agreementPopup:
@@ -1265,7 +1265,7 @@ inject:
     # 自定义css
     # - <link rel="stylesheet" href="/css/custom.css" media="defer" onload="this.media='all'">
     - <link rel="stylesheet" href="/css/custom.css">
-    - <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/css/202311151408615.css">     # 首页文章卡片擦亮效果
+    - <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/css/cardpolishing.css">     # 首页文章卡片擦亮效果
   bottom:
     # 自定义js
     # - <script src="/js/xxx"></script>
