--- a/_config.anzhiyu.yml
+++ b/_config.anzhiyu.yml
@@ -31,10 +31,10 @@ nav:
       item:
         - name: 主页
           link: https://wuyuxi.cn
-          icon: https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/avatar.svg
+          icon: https://s3.qjqq.cn/37/655779ff22313.webp!color
         - name: 博客
           link: https://blog.wuyuxi.cn
-          icon: https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/avatar.svg
+          icon: https://s3.qjqq.cn/37/655779ff22313.webp!color
         - name: 我的音乐
           link: https://music.wuyuxi.cn
           icon: https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/music.svg
@@ -166,7 +166,7 @@ favicon: /favicon.ico
 
 # Avatar (头像)
 avatar:
-  img: https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/avatar.svg
+  img: https://s3.qjqq.cn/37/6557764a5fc08.webp!color
   effect: false
 
 # Disable all banner image
@@ -194,7 +194,7 @@ cover:
 # Replace Broken Images (替换无法显示的图片)
 error_img:
   flink: https://s3.qjqq.cn/37/6555b6fb682ed.gif!color
-  post_page: https://s3.qjqq.cn/37/6555b7656b9e7.webp!color
+  post_page: https://s3.qjqq.cn/37/6555b7656b9e7.webp!color  # https://s3.qjqq.cn/37/6555b7656b9e7.webp!color
 
 # A simple 404 page
 error_404:
@@ -825,7 +825,7 @@ preloader:
   source: 3
   # pace theme (see https://codebyzach.github.io/pace/)
   pace_css_url:
-  avatar: https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/avatar.svg    # 自定加载动画义头像
+  avatar: https://s3.qjqq.cn/37/655779ff22313.webp!color    # 自定加载动画义头像
 
 # aside (侧边栏)
 # --------------------------------------
@@ -1041,7 +1041,7 @@ pangu:
 lazyload:
   enable: true
   field: site # site/post
-  placeholder:
+  placeholder: https://s3.qjqq.cn/37/65576d77eed16.gif!color
   blur: true
   progressive: true
 
@@ -1096,7 +1096,7 @@ home_top:
     swiper_js: https://npm.elemecdn.com/anzhiyu-theme-static@1.0.0/swiper/swiper.min.js #swiper js依赖
   banner: # 首页右侧轮播图
     tips: 逆风而行
-    title: 旅思秋光，黯黯长安路。
+    title: 终日乾乾，与时偕行。
     # image: /img/banner.webp # https://bu.dusays.com/2023/05/13/645fa3cf90d70.webp
     image: https://s3.qjqq.cn/37/655595891b420.webp!color
           # https://bu.dusays.com/2023/05/13/645fa3cf90d70.webp
