--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: Qing
-subtitle: '我明白你会来，所以我等。'
+subtitle: '终日乾乾，与时偕行。'
 description: '一年中和一生中的秋天，时光很短暂，但是更加晴朗而缺少变化。 我也想杀死伤痛，让那恩怨有始有终。就像那句狠话：有一天，我一定会后悔的。'
 keywords:
 author: Qing
