--- a/source/_data/about.yml
+++ b/source/_data/about.yml
@@ -1,6 +1,6 @@
 - class_name: 关于页
   subtitle: 希望明天，像过往的那一刻🎉
-  avatarImg: https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/avatar.svg
+  avatarImg: https://s3.qjqq.cn/37/655779ff22313.webp!color
   avatarSkills:
     left:
       - 🤖️ 数码科技爱好者
