--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -24,7 +24,7 @@
   link_list:
     - name: Qing
       link: https://blog.wuyuxi.cn/
-      avatar: https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/avatar.svg
+      avatar: https://s3.qjqq.cn/37/655779ff22313.webp!color
       descr: 恰沐春风共同游，终只叹，木已舟。 
       siteshot: https://s3.qjqq.cn/37/6555b8e007d48.webp!color
       color: speed
