--- a/_config.anzhiyu.yml
+++ b/_config.anzhiyu.yml
@@ -223,7 +223,8 @@ mainTone:
   mode: both # cdn/api/both cdn模式为图片url+imageAve参数获取主色调，api模式为请求API获取主色调，both模式会先请求cdn参数，无法获取的情况下将请求API获取
   # 项目地址：https://github.com/anzhiyu-c/img2color-go
   # api: https://img2color-go.vercel.app/api?img=  # mode为api时可填写
-  api: https://api.qjqq.cn/api/Imgcolor?img= # https://api.qjqq.cn/doc-Imgcolor.html 公益接口
+  # https://api.qjqq.cn/doc-Imgcolor.html 公益接口
+  api: https://api.qjqq.cn/api/Imgcolor?img= 
   cover_change: true # 整篇文章跟随cover修改主色调
 
 # wordcount (字数统计)
