--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -212,7 +212,10 @@
       link: https://hackdeacon.com/
       avatar: https://s3.qjqq.cn/37/655611b0dd976.webp!color
       descr: 用心取悦自己
-
+    - name: 听风
+      link: https://blog.akaos233.top/
+      avatar: https://s3.qjqq.cn/37/65597f0d9a76e.webp!color
+      descr: 近水楼台先得月，向阳花木易为春
 
 - class_name: 失联
   class_desc: 站点头像未显示或不能打开的站点
