--- a/_config.anzhiyu.yml
+++ b/_config.anzhiyu.yml
@@ -997,7 +997,7 @@ note:
 
 # icon图标
 icons:
-  ali_iconfont_js: https://at.alicdn.com/t/c/font_4298533_qpba9iyal3d.js?spm=a313x.manage_type_myprojects.i1.10.4bf43a81YmXfvr&file=font_4298533_qpba9iyal3d.js  # 阿里图标symbol 引用链接，主题会进行加载 symbol 引用
+  ali_iconfont_js: https://at.alicdn.com/t/c/font_4298533_vv4krxj142.js?spm=a313x.manage_type_myprojects.i1.17.4bf43a81itALF8&file=font_4298533_vv4krxj142.js  # 阿里图标symbol 引用链接，主题会进行加载 symbol 引用
   fontawesome: true  #是否启用fontawesome6图标
   fontawesome_animation_css: https://npm.elemecdn.com/hexo-butterfly-tag-plugins-plus@1.0.17/lib/assets/font-awesome-animation.min.css
   #fontawesome_animation 如果有就会加载，示例值：https://npm.elemecdn.com/hexo-butterfly-tag-plugins-plus@1.0.17/lib/assets/font-awesome-animation.min.css
