--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -216,6 +216,10 @@
       link: https://blog.akaos233.top/
       avatar: https://s3.qjqq.cn/37/65597f0d9a76e.webp!color
       descr: 近水楼台先得月，向阳花木易为春
+    - name: YYSの小窝
+      link: https://home.wfqyys.cn/
+      avatar: https://s3.qjqq.cn/37/655b5a65aa955.webp!color
+      descr: May all the beauty be blessed.
 
 - class_name: 失联
   class_desc: 站点头像未显示或不能打开的站点
