--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -220,6 +220,10 @@
       link: https://home.wfqyys.cn/
       avatar: https://s3.qjqq.cn/37/655b5a65aa955.webp!color
       descr: May all the beauty be blessed.
+    - name: 冰火之砺
+      link: https://blog.marice.top/
+      avatar: https://s3.qjqq.cn/37/655e07c042306.webp!color
+      descr: 水穷暖春云起处
 
 - class_name: 失联
   class_desc: 站点头像未显示或不能打开的站点
