--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "hexo-renderer-pug": "^3.0.0",
     "hexo-renderer-stylus": "^3.0.0",
     "hexo-server": "^3.0.0",
+    "hexo-swpp": "^3.3.1",
     "hexo-theme-landscape": "^1.0.0",
     "hexo-wordcount": "^6.0.1",
     "pwa-asset-generator": "^6.3.1",
+    "swpp-backends": "^2.1.4",
     "workbox-build": "^7.0.0"
   },
   "devDependencies": {
