--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -25,7 +25,7 @@
     - name: Qing
       link: https://blog.wuyuxi.cn/
       avatar: https://s3.qjqq.cn/37/655887614c2ce.webp!color
-      descr: 恰沐春风共同游，终只叹，木已舟。 
+      descr: 保持善良与温柔，追求上进与美好。 
       siteshot: https://s3.qjqq.cn/37/6555b8e007d48.webp!color
       color: speed
       tag: 生活
