--- a/_config.anzhiyu.yml
+++ b/_config.anzhiyu.yml
@@ -10,10 +10,10 @@ menu:
     相册集: /album/ || anzhiyu-icon-images
     游戏世界: /games/ || icon-youxi
   友链:
-    友人帐: /link/ || anzhiyu-icon-link
-    朋友圈: /fcircle/ || anzhiyu-icon-artstation
+    友人帐: /link/ || icon-user-friends
+    朋友圈: /fcircle/ || icon-pengyouquan1
     留言板: /comments/ || anzhiyu-icon-envelope
-    小空调: /air-conditioner/ || anzhiyu-icon-fan
+    小空调: /air-conditioner/ || icon-kongdiao
   我的:
     我的装备: /equipment/ || anzhiyu-icon-dice-d20
     即刻短文: /essay/ || anzhiyu-icon-lightbulb
@@ -998,7 +998,7 @@ note:
 
 # icon图标
 icons:
-  ali_iconfont_js: https://at.alicdn.com/t/c/font_4298533_vv4krxj142.js?spm=a313x.manage_type_myprojects.i1.17.4bf43a81itALF8&file=font_4298533_vv4krxj142.js  # 阿里图标symbol 引用链接，主题会进行加载 symbol 引用
+  ali_iconfont_js: https://at.alicdn.com/t/c/font_4298533_jx25wehlqr.js?spm=a313x.manage_type_myprojects.i1.10.4bf43a81eqiRNJ&file=font_4298533_jx25wehlqr.js  # 阿里图标symbol 引用链接，主题会进行加载 symbol 引用
   fontawesome: true  #是否启用fontawesome6图标
   fontawesome_animation_css: https://npm.elemecdn.com/hexo-butterfly-tag-plugins-plus@1.0.17/lib/assets/font-awesome-animation.min.css
   #fontawesome_animation 如果有就会加载，示例值：https://npm.elemecdn.com/hexo-butterfly-tag-plugins-plus@1.0.17/lib/assets/font-awesome-animation.min.css
