--- a/_config.anzhiyu.yml
+++ b/_config.anzhiyu.yml
@@ -92,7 +92,7 @@ social:
 author_status:
   enable: true
   # 可以是任何图片，建议放表情包或者emoji图片，效果都很好，[表情包速查](https://emotion.xiaokang.me/)
-  statusImg: "https://cdn.jsdelivr.net/gh/zhheo/Sticker-Heo@latest/Sticker-100/偷偷看.png"
+  statusImg: "https://bu.dusays.com/2021/06/20/d76ee9407dda6.png"
   skills:
     - 🤖️ 数码科技爱好者
     - 🔍 分享与热心帮助
