--- a/_config.anzhiyu.yml
+++ b/_config.anzhiyu.yml
@@ -1030,6 +1030,7 @@ snackbar:
   bg_light: "#e9b9ab" # The background color of Toast Notification in light mode
   bg_dark: "#1f1f1f" # The background color of Toast Notification in dark mode
 
+
 # https://instant.page/
 # prefetch (预加载)
 instantpage: true
@@ -1163,6 +1164,7 @@ nav_music:
   console_widescreen_music: false # 宽屏状态控制台显示音乐而不是标签 enable为true 控制台依然会显示
   id: 8152976493
   server: netease
+  volume: 0.7 # 默认音量
   all_playlist: https://y.qq.com/n/ryqq/playlist/8802438608
 
 # 评论匿名邮箱
