--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ url: http://blog.wuyuxi.cn
 # permalink: :year/:month/:day/:title/   
 # permalink: :title-:hash/
 permalink: post/:abbrlink.html # post为自定义前缀
+
 abbrlink:
   alg: crc32   #算法： crc16(default) and crc32
   rep: hex     #进制： dec(default) and hex
@@ -49,6 +50,7 @@ render_drafts: false
 post_asset_folder: false
 relative_link: false
 future: true
+syntax_highlighter: highlight.js
 highlight:
   enable: true
   line_number: true
