--- a/_config.anzhiyu.yml
+++ b/_config.anzhiyu.yml
@@ -998,7 +998,7 @@ note:
 
 # icon图标
 icons:
-  ali_iconfont_js: https://at.alicdn.com/t/c/font_4298533_l7id41boe7.js?spm=a313x.manage_type_myprojects.i1.10.4bf43a81EWA8hO&file=font_4298533_l7id41boe7.js  # 阿里图标symbol 引用链接，主题会进行加载 symbol 引用
+  ali_iconfont_js: https://at.alicdn.com/t/c/font_4298533_724ta6a7tw.js?spm=a313x.manage_type_myprojects.i1.10.4bf43a81vI1NU5&file=font_4298533_724ta6a7tw.js  # 阿里图标symbol 引用链接，主题会进行加载 symbol 引用
   fontawesome: true  #是否启用fontawesome6图标
   fontawesome_animation_css: https://npm.elemecdn.com/hexo-butterfly-tag-plugins-plus@1.0.17/lib/assets/font-awesome-animation.min.css
   #fontawesome_animation 如果有就会加载，示例值：https://npm.elemecdn.com/hexo-butterfly-tag-plugins-plus@1.0.17/lib/assets/font-awesome-animation.min.css
@@ -1270,9 +1270,10 @@ inject:
   head:
     # 自定义css
     # - <link rel="stylesheet" href="/css/custom.css" media="defer" onload="this.media='all'">
-    - <link rel="stylesheet" href="//at.alicdn.com/t/c/font_4298533_l7id41boe7.css" media="defer" onload="this.media='all'"> # 导航栏字体图标
+    - <link rel="stylesheet" href="//at.alicdn.com/t/c/font_4298533_724ta6a7tw.css" media="defer" onload="this.media='all'"> # 导航栏字体图标
     - <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/css/earth.css">  # 首页太阳卫星动画
     - <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/css/cardpolishing.css">     # 首页文章卡片擦亮效果
+    # - <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/css/lantern.css">     # 灯笼
     - <link rel="stylesheet" href="/css/custom.css">
     # - <link rel="stylesheet" href="/css/earth.css">
 
